fix: no scrollbars

--- a/styles/_utilities.scss
+++ b/styles/_utilities.scss
@@ -23,3 +23,14 @@
 		clip: auto;
 	}
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+}
